<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alamanch du Marin Breton</string>
    <string name="app_court_name">AMB</string>
    <string name="rose_des_vents">Rose des vents</string>
    <string name="maxime">La maxime : " Le poisson ne voit pas l'hameçon, il ne voit que l'appât"</string>
    
    <string name="menu_port">Port : Aucun -&gt;</string>
    <string name="menu_marina">Port : Brest - Marina du château</string>
    <string name="menu_mode">Carte</string>
    <string name="menu_affichage">Affichage -&gt;</string>
    <string name="menu_OSM">OpenSeaMap</string>
    <string name="menu_service">Service</string>
    <string name="menu_ponton">Ponton</string>
    <string name="menu_sounding">Profondeur</string>
    <string name="menu_compte">Mon compte</string>
    
    <string name="defaultPosition">lat: NC, lon: NC</string>
    <string name="label_speed">Vitesse:</string>
    <string name="defaultSpeed">NC</string>
    <string name="label_bearing">Cap:</string>
    <string name="defaultBearing">NC</string>
    
    <string name="menu_online">Connexion : Online</string>
    <string name="menu_offline">Connexion : Offline</string>
    <string name="menu_description">Mode : Description</string>
    
    <string name="title_activity_description_display">Description du port</string>
    <string name="error_missing_port">Veuillez sélectionner un port</string>
    <string name="menu_details">Affichage : Détails</string>
    <string name="menu_courant">Affichage : Courants</string>
    <string name="menu_marees">Affichage : Marées</string>
    <string name="menu_meteo">Affichage : Météo</string>
    
    <string name="url_marees">http://maree.info/82</string>
    <string name="url_meteo">http://www.windguru.cz/fr/index.php?sc=48447</string>
    <string name="name_marina">BrestMarinaDuChateau</string>
    <string name="map">Mode : Carte</string>
    <string name="menu_login">Se connecter</string>
    <string name="menu_forum">Mode : Forum</string>
    <string name="cancel">Annuler</string>
    <string name="save">Enregistrer</string>
    <string name="myShare">mon partage</string>
    <string name="share_position_no">Ne pas partager ma position</string>
    <string name="share_position_public">Partager ma position de manière publique</string>
    <string name="share_position_private">Partage ma position de manière privée</string>
    <string name="pseudo">mon pseudo</string>
    <string name="logout">Se déconnecter</string>
    <string name="menu_all_comment">Tous les commentaires</string>
    <string name="menu_my_comment">Mes commentaires</string>
    <string name="menu_comment">Commentaire</string>
    
    <string name="streamTime0">PM-6</string>
    <string name="streamTime1">PM-5</string>
    <string name="streamTime2">PM-4</string>
    <string name="streamTime3">PM-3</string>
    <string name="streamTime4">PM-2</string>
    <string name="streamTime5">PM-1</string>
    <string name="streamTime6">PM</string>
    <string name="streamTime7">PM+1</string>
    <string name="streamTime8">PM+2</string>
    <string name="streamTime9">PM+3</string>
    <string name="streamTime10">PM+4</string>
    <string name="streamTime11">PM+5</string>
    <string name="streamTime12">PM+6</string>
    
    




    
    
    
    
    
    
    
</resources>
