<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_port"
        android:showAsAction="ifRoom"
        android:title="@string/menu_port">
        <menu>
            <item
                android:id="@+id/menu_marina"
                android:title="@string/menu_marina"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_mode"
        android:showAsAction="ifRoom"
        android:title="Mode">
        <menu>
            <item
                android:id="@+id/map"
                android:title="@string/map"/>
            <item
                android:id="@+id/map_description"
                android:title="@string/menu_description"/>
            <item
                android:id="@+id/menu_forum"
                android:title="@string/menu_forum"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_connexion"
        android:showAsAction="ifRoom"
        android:title="@string/menu_offline">
        <menu>
            <item
                android:id="@+id/map_online"
                android:title="@string/menu_online"/>
            <item
                android:id="@+id/map_offline"
                android:enabled="false"
                android:title="@string/menu_offline"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_compte"
        android:showAsAction="ifRoom"
        android:enabled="false"
        android:title="@string/menu_compte"/>

</menu>